# stitch-lh

./: LICENSE  README.md  cabal.project  nixpkgs.nix  shell-stack.nix  stack.yaml  stitch-lh.cabal  stitch.cabal
main/: Main.hs
src/Language/Stitch/: CSE.hs  Check.hs  Eval.hs  Exp.hs  Globals.hs  Infer.hs  Lex.hs  Monad.hs  Op.hs  Parse.hs  Pretty.hs  Repl.hs  Scratch.hs  Shift.hs  Statement.hs  Step.hs  Token.hs  Type.hs  UEval.hs  Unchecked.hs  Util.hs
src/Language/Stitch/Control/Monad/: HReader.hs
src/Language/Stitch/Data/: Exists.hs  Fin.hs  IHashSet.hs  IHashable.hs  List.hs  Map.hs  Nat.hs  SNat.hs  Singletons.hs  Vec.hs
src/Language/Stitch/Data/IHashMap/: Array.hs  Base.hs  LICENSE  Lazy.hs  List.hs  UnsafeShift.hs
src/Language/Stitch/Data/IHashSet/: Base.hs
src/Language/Stitch/LH/: Check.hs  Eval.hs  Lex.hs  Monad.hs  Parse.hs  Repl.hs  Statement.hs  Step.hs  Type.hs  Unchecked.hs
src/Language/Stitch/LH/Data/: List.hs  Map.hs
tests/Tests/: Check.hs  Lex.hs  Parse.hs  Util.hs
